# relate

./: .CMakeLists.txt.swp  .gitignore  .relate_completion.zsh  CMakeLists.txt  CMakeLists.txt~  README.md
docs/: .contact.html.swp  .documentation.css.swp  .getting_started.html.swp  .index.html.swp  .modules.html.swp  .nfs00000000000005b9000007f5  .nfs0000000000000c9b000007f4  .nfs0000000000000cf6000008a5  .nfs0000000000000cff000007f6  .nfs0000000000000efc000008a7  .nfs0000000000000f0f000008a6  .nfs0000000000000f760000005d  .nfs0000000000005f840000005c  .parallelise.html.swp  .preparing_data.html.swp  contact.html  contact.html~  documentation.css  documentation.css~  getting_started.html  getting_started.html~  index.html  index.html~  input_data.html  input_data.html~  modules.html  modules.html~  parallelise.html  parallelise.html~  preparing_data.html  preparing_data.html~
docs/download/: compress.sh  copy.sh  ms2haps.R  relate_v1.0.0_x86_64_dynamic.tgz  relate_v1.0.1_MacOSX.tgz  relate_v1.0.1_x86_64_dynamic.tgz  relate_v1.0.5_MacOSX.tgz  relate_v1.1.0_MacOSX.tgz  relate_v1.1.0_x86_64_dynamic.tgz  relate_v1_MacOSX.tgz  relate_v1_linux.tar  relate_v1_x86_64_dynamic.tgz
docs/figures/: mutation_rate.pptx  population_size.pptx  selection.pptx  tree.pptx  ~$selection.pptx
example/: example.mut  example2.mut  example2_sampled.anc  example2_sampled.clues  example2_sampled.mut  example2_sampled.newick  example2_sampled.sites  example_bypop.coal  example_bypop.dist  example_bypop.mut  example_bypop_avg.rate  example_bypop_pairwise.coal  example_bypop_sampled.anc  example_bypop_sampled.mut  example_popsize.anc  example_popsize.coal  example_popsize.mut  example_popsize_avg.rate  example_whole_genome.coal  example_whole_genome.mut  example_whole_genome_avg.rate  plot.R  run.sh  run_relate.sh  run_relate.sh~  run_sampling.sh
example/data/: add.haps  example.poplabels  (+1 more)
include/: .Rhistory
include/evaluate/: .CheckMask.cpp.swp  .OldBranches.cpp.swp  .RelateEvaluate.cpp.swp  .get_pair_coalescent_rate.cpp.swp  CMakeLists.txt  CMakeLists.txt~
include/evaluate/coalescent_rate/: .CoalescentRateForSection.cpp.swp  .FinalizePopulationSize.cpp.swp  .ReEstimateBranchLengths.cpp.swm  .ReEstimateBranchLengths.cpp.swo  .ReEstimateBranchLengths.cpp.swp  .RelateCoalescentRate.cpp.swp  CoalescentRateForSection.cpp  CoalescentRateForSection.cpp~  FinalizePopulationSize.cpp  FinalizePopulationSize.cpp~  ReEstimateBranchLengths.cpp  ReEstimateBranchLengths.cpp~  RelateCoalescentRate.cpp  RelateCoalescentRate.cpp~  SummarizeCoalescentRateForGenome.cpp  SummarizeCoalescentRateForGenome.cpp~  coal_tree.cpp  coal_tree.hpp
include/evaluate/coalescent_rate/old/: SummarizeCoalescentRateForChr.cpp
include/evaluate/mutation_rate/: .AvgMutationRate.cpp.swp  .RelateMutationRate.cpp.swl  .RelateMutationRate.cpp.swo  .RelateMutationRate.cpp.swp  AvgMutationRate.cpp  AvgMutationRate.cpp~  RelateMutationRate.cpp  RelateMutationRate.cpp~
include/evaluate/selection/: .RelateSelection.cpp.swp  .Selection.cpp.swp  RelateSelection.cpp  RelateSelection.cpp~
include/evaluate/selection/old/: GetAgeFrequencyDistribution.cpp  GetAgeFrequencyDistribution.cpp~  GetAgeLineagesDistribution.cpp  GetAgeLineagesDistribution.cpp~  Selection.cpp  Selection.cpp~
include/src/: .anc.hpp.swo  .anc.hpp.swp  .anc_builder.hpp.swp  .arg_builder.cpp.swm  .arg_builder.cpp.swo  .arg_builder.cpp.swp  .branch_length_estimator.cpp.swm  .branch_length_estimator.cpp.swn  .branch_length_estimator.cpp.swo  .branch_length_estimator.cpp.swp  .branch_length_estimator.hpp.swp  .collapsed_matrix.hpp.swp  .data.cpp.swo  .data.cpp.swp  .data.hpp.swo  .data.hpp.swp  .filesystem.cpp.swp  .filesystem.hpp.swp  .tree_builder.cpp.swh  .tree_builder.cpp.swi  .tree_builder.cpp.swk  .tree_builder.cpp.swl  .tree_builder.cpp.swm  .tree_builder.cpp.swn  .tree_builder.cpp.swo  .tree_builder.cpp.swp  .tree_builder.hpp.swm  .tree_builder.hpp.swo  .tree_builder.hpp.swp  .tree_comparer.cpp.swo  .tree_comparer.cpp.swp  CMakeLists.txt  CMakeLists.txt~  anc.cpp  anc.cpp~  anc.hpp  anc.hpp~  anc_builder.cpp  anc_builder.cpp~  anc_builder.hpp  (+43 more)
include/src/gzstream/: CMakeLists.txt  CMakeLists.txt~  gzstream.C  gzstream.cpp  gzstream.h  gzstream.h~
include/src/unused/: branch_length_estimator.cpp
(+402 files in other folders)
